# HuDK

./: .gitignore  .gitmodules  CMakeLists.txt  HuDK.h  LICENSE  Makefile  README.md  appveyor.yml
cfg/: hucard8K.cfg
doc/: index.html
doc/files/: io-inc.html  vce-inc.html  vdc-inc.html  word-inc.html
doc/files/docs/: pachinko-txt.html  vce-txt.html  vdc-txt.html
doc/files/include/: analog-s.html  bcd-s.html  bram-s.html  byte-inc.html  clock-inc.html  collision-s.html  crc-s.html  dword-inc.html  fat32-s.html  font-inc.html  font-s.html  huc-inc.html  io-inc.html  irq-inc.html  joypad-inc.html  joypad-s.html  map-s.html  math-s.html  memcpy-inc.html  mpr-inc.html  mpr-s.html  print-s.html  psg-inc.html  (+15 more)
doc/index/: Classes.html  Files.html  Functions.html  General.html  General2.html  General3.html  General4.html  General5.html  Macros.html  Variables.html  Variables2.html
doc/javascript/: searchdata.js
doc/search/: ClassesS.html  FilesB.html  FilesD.html  FilesF.html  FilesH.html  FilesI.html  FilesS.html  FilesV.html  FilesW.html  FunctionsA.html  FunctionsB.html  FunctionsC.html  FunctionsD.html  FunctionsF.html  FunctionsI.html  FunctionsJ.html  FunctionsM.html  FunctionsNumbers.html  FunctionsO.html  FunctionsP.html  FunctionsR.html  FunctionsS.html  FunctionsSymbols.html  FunctionsT.html  FunctionsU.html  FunctionsV.html  GeneralA.html  GeneralB.html  GeneralC.html  GeneralD.html  GeneralE.html  GeneralF.html  GeneralH.html  GeneralI.html  GeneralJ.html  GeneralL.html  GeneralM.html  GeneralN.html  GeneralNumbers.html  GeneralP.html  (+35 more)
doc/styles/: 2.css
docs/: cc65.txt  pachinko.txt  vce.txt  vdc.txt
docs/nd/: Languages.txt  Menu.txt
example/: CMakeLists.txt  Makefile  README.md
example/C/: Makefile
example/C/1_hello_world/: CMakeLists.txt  Makefile  hello_world.c
example/C/20_vgm/: CMakeLists.txt  Makefile  vgm_play.c
example/C/2_custom_font/: CMakeLists.txt  Makefile  custom_font.c
example/C/3_map_8x8/: CMakeLists.txt  Makefile  map_8x8.c
example/C/4_map_16x16/: CMakeLists.txt  Makefile  map_16x16.c
example/C/5_joypad/: CMakeLists.txt  Makefile  joypad_test.c
example/C/6_sprites/: CMakeLists.txt  Makefile  sprites.c
example/C/7_scroll/: CMakeLists.txt  Makefile  scroll_test.c
example/C/8_clock/: CMakeLists.txt  Makefile  clock.c
example/C/9_pong/: CMakeLists.txt  Makefile  pong.c
example/asm/: Makefile  bm_tools.s  build.txt  crc32.s  dummy.s  fat32_read.s  joytest.s  map16x16.s  map8x8.s  text.cfg  text.s  vgm_play.s
example/asm/1_hello_world/: CMakeLists.txt  Makefile  hello_world.s
example/asm/20_vgm/: CMakeLists.txt  Makefile  magician_domain.vgm  vgm_play.cfg  vgm_play.s
example/asm/2_custom_font/: CMakeLists.txt  Makefile  README.md  custom_font.s
example/asm/3_map_8x8/: CMakeLists.txt  Makefile  map_8x8.inc  map_8x8.s
example/asm/4_map_16x16/: CMakeLists.txt  Makefile  map_16x16.s
example/asm/5_joypad/: CMakeLists.txt  Makefile  README.md  joypad.s
example/asm/6_sprites/: CMakeLists.txt  Makefile  data.json  sprites.cfg  sprites.s
example/asm/7_scroll/: CMakeLists.txt  Makefile  scroll.cfg  scroll.s  scroll_test.s
example/asm/8_clock/: CMakeLists.txt  Makefile  clock.cfg  clock.s
example/asm/8_vgm/: CMakeLists.txt  vgm_play.s
example/asm/9_pong/: CMakeLists.txt  Makefile  pong.s  pong_map.json  pong_map.tmx  sin.inc  table.c
example/ca65/: Makefile  dummy.cfg  dummy.s
example/cc65/: Makefile  main.c  pce_runtime.lib
example/cmake/: cc65-toolchain.cmake  huc-toolchain.cmake
example/cmake/Compiler/: ca65-ASM.cmake  pceas-ASM.cmake
example/data/: hudk.pal  hudk.pcx  hudson.pal  hudson.pcx
example/data/2_custom_font/: data.json
example/data/3_map_8x8/: map_8x8.tmx
example/data/4_map_16x16/: map_16x16.json  map_16x16.tmx
example/data/9_pong/: pong_map.tmx  sprite.json
example/data/fat32/: Readme.md  bank_0000  bank_0001  bank_0002  fat32.img.inc  img_slice.c  read_sector.s
example/data/map/: map16x16.json  map16x16.tmx  map8x8.json  map8x8.tmx
example/doc/1_hello_world/: README.md
example/doc/2_custom_font/: README.md
example/doc/3_map_8x8/: README.md
example/doc/6_sprites/: README.md
example/pceas/: CMakeLists.txt  Makefile  bm_tools.s  crc32.s  dummy.s  map16x16.s  map8x8.s  text.s
example/pceas/cmake/: huc-toolchain.cmake
example/pceas/cmake/Compiler/: pceas-ASM.cmake
example/pceas/fat32/: read.s
example/pceas/joypad/: joytest.s
example/pceas/vgm/: Makefile  djs01.vgm  song.inc  vgm_play.s
include/: analog.s  bcd.s  bram.s  byte.inc  clock.inc  collision.s  crc.s  dword.inc  fat32.s  font.inc  font.s  huc.inc  huc.s  hudk.h  hudk.inc  hudk.s  io.inc  irq.inc  irq.s  irq_1.s  irq_2.s  irq_nmi.s  irq_reset.asm  irq_reset.s  irq_timer.s  joypad.inc  joypad.s  macro.inc  map.s  math.s  memcpy.inc  memcpy.s  mpr.inc  mpr.s  print.s  psg.inc  psg.s  random.s  reset.s  scroll.s  (+16 more)
include/ca65/: byte.inc  compat.inc  font.inc  irq.inc  irq_reset.s  joypad.inc  map.s  memcpy.inc  mpr.s  psg.s  start.s  system.inc  vce.inc  vce.s  vdc.inc  vdc.s  vdc_sprite.inc  word.inc
include/pceas/: byte.inc  compat.inc  dword.inc  font.inc  irq.inc  irq_reset.s  joypad.inc  macro.inc  map.s  memcpy.inc  sprite.inc  start.s  system.inc  vce.inc  vdc.inc  vdc_sprite.inc  word.inc
nd/: Languages.txt  Menu.txt
nd/Data/: ConfigFileInfo.nd  FileInfo.nd  ImageFileInfo.nd  ImageReferenceTable.nd  IndexInfo.nd  PreviousMenuState.nd  PreviousSettings.nd  SymbolTable.nd
tools/: CMakeLists.txt  Makefile  README.md  encode_gfx.c  image.c  image.h  json.c  json.h  output.c  output.h  pce.c  pce.h  tiled2bat.c  tilemap.c  tilemap.h  tileset.c  tileset.h  vgm_strip.c  vgmstrip.c
tools/.build/: encode_gfx
tools/cmake/: FindMXML.cmake
tools/tiled2bat/: CMakeLists.txt  base64.c  base64.h  image.c  json.c  json.h  log.c  log.h  tiled2bat.c  tilemap.c  tilemap.h  tileset.c  tileset.h  utils.c  utils.h  xml.c  xml.h
tools/utils/: CMakeLists.txt  array.c  array.h  base64.c  base64.h  buffer.c  buffer.h  image.c  image.h  log.c  log.h  output.c  output.h  pce.c  pce.h  utils.c  utils.h
